# personal_planner_app

./: .gitignore
Backend/: alembic.env.example.py  entrypoint.sh  pyproject.toml
Backend/Application/UseCases/: documentUseCases.py  taskUseCases.py  transactionUseCases.py
Backend/Domain/Entity/: document_entity.py  task_entity.py  transaction_entity.py
Backend/Domain/repository/: document_repository.py  task_repository.py  transaction_repository.py
Backend/Domain/value_objects/: Money.py  transaction_type.py
Backend/Infrastructure/DB/ORM/: document_ORM.py  task_ORM.py  transaction_ORM.py
Backend/Infrastructure/DB/repo_implement/: document_repo_impl.py  task_repo_impl.py  transaction_repo_impl.py
Backend/Shared/: database.py
Backend/alembic/: env.py
Backend/alembic/versions/: 1244a716a46a_nunable_true_for_transaction_task_col.py  71cdb407cb81_table_added.py  e0d607510055_currency_deleted_amount_changed_to_.py
Backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Backend/presentation/API/: main.py
Backend/presentation/API/pydantic_models/: document_pydantic.py  task_pydanic.py  transaction_pydantic.py
Backend/presentation/API/routes/: document_routes.py  task_routes.py  transaction_routes.py
Backend/presentation/CLI/: main.py
Backend/presentation/CLI/commands/: document_commands.py  task_commands.py  transaction_commands.py
Backend/presentation/pydantic_models/: transaction_pydantic.py
src/Application/UseCases/: userUseCases.py
src/Domain/Entity/: user_entity.py
src/Domain/repository/: user_repository.py
(+16 files in other folders)
