[project]
name = "backend"
version = "0.1.0"
description = "The backend of app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "alembic>=1.14.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.13.4",
    "typer>=0.26.8",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
pfc-run-fastapi = "presentation.main:fastapi_app"
pfc-cli = "presentation.main:cli_app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
